
Versions of Major Components
---------------------

Detailed Change List
----------------------

New Features
----------------------

1. SOLR-1302: Added several new distance based functions, including Great Circle (haversine), Manhattan and Euclidean.
  Also added deg() and rad() convenience functions. (gsingers)

Optimizations
----------------------

Bug Fixes
----------------------

Other Changes
----------------------

1. SOLR-1561: Added Lucene 2.9.1 spatial contrib jar to lib. (gsingers)

Build
----------------------

1. SOLR-1522: Automated release signing process. (gsingers)

Documentation
----------------------

================== Release 1.4.0 ==================
Release Date:  See http://lucene.apache.org/solr for the official release date.

Upgrading from Solr 1.3
-----------------------

There is a new default faceting algorithm for multiVaued fields that should be
faster for most cases.  One can revert to the previous algorithm (which has
also been improved somewhat) by adding facet.method=enum to the request.

Searching and sorting is now done on a per-segment basis, meaning that
the FieldCache entries used for sorting and for function queries are
created and used per-segment and can be reused for segments that don't
change between index updates.  While generally beneficial, this can lead
to increased memory usage over 1.3 in certain scenarios: 
  1) A single valued field that was used for both sorting and faceting
in 1.3 would have used the same top level FieldCache entry.  In 1.4, 
sorting will use entries at the segment level while faceting will still
use entries at the top reader level, leading to increased memory usage.
  2) Certain function queries such as ord() and rord() require a top level
FieldCache instance and can thus lead to increased memory usage.  Consider
replacing ord() and rord() with alternatives, such as function queries
based on ms() for date boosting.
